--- a/qwltsdk/build.gradle
+++ b/qwltsdk/build.gradle
@@ -36,7 +36,7 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core:1.10.1'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
@@ -45,8 +45,11 @@ dependencies {
     def coroutine_version = "1.3.0"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_version"
-    def room_version = "2.2.3"
-    implementation "androidx.room:room-runtime:$room_version"
+   // def room_version = "2.2.3"
+  /*  implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"*/
+    /**/
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
+
 }
