--- a/qwltsdk/src/main/AndroidManifest.xml
+++ b/qwltsdk/src/main/AndroidManifest.xml
@@ -3,13 +3,17 @@
     <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
-
-
+    <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <application
         android:allowBackup="true">
 
         <service android:name=".StepCountService"  android:enabled="true"
             android:exported="false"/>
+        <receiver android:name=".ServiceRestartReceiver" />
+
     </application>
 
 </manifest>
